# TimeFlies

./: .coverage  .gitignore  .pre-commit-config.yaml  =2.1.0  Analysis.ipynb  DEPLOYMENT_EXAMPLE.md  LICENSE  NEW_FOLDER_STRUCTURE.md  README.md  README.md.backup  README_clean.md  TimeFlies_Launcher.py  USER_SETUP_GUIDE.md  activate_dev.sh  batch.py  config.yaml  dev.py  install_timeflies.sh  pyproject.toml  pytest.ini  requirements.txt  run_setup.py  run_timeflies.py  setup.py  setup_dev_env.sh  timeflies.py  timeflies_todo.md
.github/workflows/: ci.yml
Analysis/: Analysis.ipynb
Analysis/batch_corrected/: fly_eval_scvi_scores.csv  fly_original_scvi_scores.csv
Code/: analysis.py  config.py  config_old.py  eda.py  interpreter.py  model copy.py  model.py  pipeline_manager.py  preprocess.py  scvi_batch.py  setup.py  time_flies.py  utilities.py  visuals.py
Data/gene_lists/: sex.csv
Data/raw/gene_lists/: autosomal.csv
Other/: filtered_highly_variable_genes.csv  model_results.xlsx
Report/: Methods.docx
Report/01_24/: 27_01_24 (Age Update).pptx
Report/03_24/: 03_24 (Age Update).pptx
Report/06_24/: 06_24 (Age Update).pptx
Requirements/: mac_gpu.yml
Requirements/windows/: Windows_GPU.yml
batch/: anndata.ipynb  fly_eval_scvi_scores.csv  scvi_batch.py
configs/: batch.yaml  batch_correction.yaml  default.yaml  gpu_test.yaml  hyperparameter_tuning.yaml  model_queue.yaml  model_queue_advanced_preprocessing.yaml  model_queue_example.yaml  model_queue_quick_test.yaml  quick_test.yaml  setup.yaml  test_data_defaults.yaml
configs/fruitfly_aging/: default.yaml
configs/fruitfly_alzheimers/: default.yaml
coverage/: .coverage
data/fruitfly_aging/body/: .gitkeep
data/fruitfly_aging/head/: .gitkeep
data/fruitfly_alzheimers/body/: .gitkeep
data/fruitfly_alzheimers/head/: .gitkeep
docs/: COMMANDS.md  README.md  hyperparameter_tuning_guide.md  index.html  model_queue_guide.md  multi_project_structure.md  quickstart.md  timeflies_refactor_master_task_list.md  timeflies_todo.md
notebooks/: analysis.ipynb
old/: config.py  model.py  preprocess.py  time_flies.py  utilities.py
outputs/fruitfly_aging/: README.md
outputs/fruitfly_aging/metrics/: evaluation_metrics.json
outputs/fruitfly_alzheimers/: README.md
outputs/fruitfly_alzheimers/metrics/: evaluation_metrics.json
outputs/fruitfly_alzheimers/results/: predictions.csv
requirements/: README.md  requirements.txt
requirements/linux/: batch_environment.yml
requirements/macOS/: mac_environment.yml  requirements.txt
requirements/windows/: windows_environment.yml
scripts/: cleanup_old_files.py  final_naming_cleanup.py  fix_naming_convention.py  reorganize_data.py  reorganize_h5ad.py  reorganize_new_data.py  test_structure.py
src/analysis/: __init__.py  fruitfly_aging_analysis.py  fruitfly_alzheimers_analysis.py
src/common/: __init__.py  timeflies_cli.py
src/common/analysis/: __init__.py  eda.py  visualizer.py  visuals.py
src/common/cli/: __init__.py  commands.py  main.py  parser.py  system_checks.py
src/common/core/: __init__.py  active_config.py  analysis_queue.py  config_manager.py  data_manager.py  display_utils.py  hyperparameter_tuner.py  model_manager.py  model_queue.py  pipeline_manager.py
src/common/data/: __init__.py  loaders.py  setup.py
src/common/display/: __init__.py  display_manager.py
src/common/evaluation/: __init__.py  interpreter.py  metrics.py
src/common/gui/: __init__.py  gradio_launcher.py
src/common/models/: __init__.py  model.py  model_factory.py
src/common/utils/: constants.py  exceptions.py  gpu_handler.py  logging_config.py  path_manager.py  split_naming.py  storage_manager.py
src/projects/: __init__.py
src/projects/fruitfly_aging/: __init__.py
src/projects/fruitfly_alzheimers/: __init__.py
src/shared/: __init__.py
src/shared/analysis/: eda.py  visuals.py
src/shared/cli/: __init__.py  commands.py  main.py  parser.py
src/shared/core/: __init__.py  active_config.py  config_manager.py  pipeline_manager.py
src/shared/data/: __init__.py  loaders.py  setup.py
src/shared/evaluation/: metrics.py
src/shared/models/: __init__.py  (+2 more)
src/timeflies/: __init__.py  notebook.py
src/timeflies.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: README.md  aging_analysis_template.py  custom_analysis_example.py  fruitfly_aging_analysis.py  fruitfly_alzheimers_analysis.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_performance.py  test_runner.py  test_utils.py
tests/fixtures/: create_test_data.py  fixture_generator.py  sample_data.py  test_data_stats.json  test_data_summary.json  test_utils.py  unit_test_data.py
tests/functional/: test_complete_pipeline.py  test_end_to_end_workflows.py  test_workflows.py
tests/integration/: __init__.py  test_cli_integration.py  test_complete_real_workflow.py  test_data_loading_components.py  test_e2e_workflow.py  test_evaluation_workflows.py  test_hyperparameter_tuning_e2e.py  test_memory_efficient_pipeline.py  test_model_queue_e2e.py  test_model_training_components.py  test_pipeline_integration.py  test_real_data_pipeline.py  test_real_data_workflows.py  test_real_workflows.py
tests/system/: test_cli_commands.py  test_installation.py
tests/unit/: __init__.py  test_analysis.py  test_analysis_unit.py  test_basic_components.py  test_cli_commands.py  test_cli_commands_unit.py  test_cli_parser.py  test_cli_unit.py  test_comprehensive_unit.py  test_config_manager.py  test_config_unit.py  test_configuration.py  test_data_processing.py  test_data_processing_unit.py  test_data_processor.py  test_eda_analysis.py  test_evaluation_comprehensive_unit.py  test_evaluation_integration.py  test_evaluation_metrics.py  test_evaluation_unit.py  test_gpu_handler.py  test_gui.py  test_hyperparameter_tuner.py  test_interpreter.py  test_model.py  test_model_factory.py  test_model_factory_unit.py  test_model_queue.py  test_model_training.py  test_models_unit.py  test_path_manager.py  test_pipeline_components.py  test_pipeline_components_unit.py  test_pipeline_manager.py  test_pipeline_manager_unit.py
(+513 files in other folders)
